fix UI for no scrollbar, no fixed navbar

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+body {
+    overflow: hidden;
+}
+
 .menu-group{
     margin-bottom: 0px !important;
     height: 75px !important;
@@ -38,28 +42,49 @@
     padding-top: 5px;
 }
 
-.side-menu{
+.content {
+    width: auto;
+    height: auto;
+}
+
+.side-menu {
     width: 55px;
-    height: 1500px;
-    float: left;
+    min-height: 1600px;
+    height: 100%;
+    overflow: hidden;
+    display: inline-block;
     background-color: #f8f8f8;
     border-style: solid;
     border-width: 0px 1px 0px 1px;
     border-color: #e7e7e7;
 }
 
-.graph-area{
-    margin-top: 74px;
-    margin-left: 55px;
-    /*min-width: 640px;*/
-    /*min-height: 480px;*/
-    background-color: white;
-}
-
-.side-menu-button{
+.side-menu-button {
     display: block;
     margin : 10px auto;
     width : 35px;
+    padding: 6px 2px;
+}
+
+.side-menu-button .tooltip-text {
+    visibility: hidden;;
+    width: 120px;
+    background-color: #000000;
+    color: #fff;
+    opacity: 0.75;
+    text-align: center;
+    padding: 5px 0;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    border-radius: 6px;
+    position: absolute;
+    margin-top: -5px;
+    margin-left: 18px;
+    z-index: 1;
+}
+.side-menu-button:hover .tooltip-text {
+    visibility: visible;
+    z-index: 5;
 }
 
 .zoom-menu{
@@ -81,4 +106,16 @@
 .zoom-menu-percentage{
     display: inline;
     width : 63px;
+}
+
+.graph-area {
+    /*margin-top: 74px;*/
+    /*margin-left: 55px;*/
+    width: calc(100% - 55px);
+    height: 100%;
+    display: inline-block;
+    float: right;
+    /*min-width: 640px;*/
+    /*min-height: 480px;*/
+    background-color: white;
 }
